Migrated project to Intellij